[tool.poetry]
name = "docker-tor-hidden-service"
version = "0.7.1"
description = "Display onion sites hosted"
authors = ["Christophe Mehay <cmehay@nospam.student.42.fr>"]
license = "WTFPL"
repository = "https://github.com/cmehay/docker-tor-hidden-service"
classifiers=[
        "Programming Language :: Python",
        "Development Status :: 1 - Planning",
        "License :: OSI Approved :: BSD License",
        "Natural Language :: English",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Topic :: System :: Installation/Setup",
    ]
packages = [
    { include = "onions" },
]

[tool.poetry.scripts]
onions = "onions:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Jinja2 = ">=2.10"
importlib_metadata = ">=1.6.0"
vanguards = "^0.3.1"
ipy = ">=1.00"
pytor = '^0.1.9'
pyentrypoint = "^0.8.0"

[tool.poetry.dev-dependencies]
autopep8 = ">=1.5.2"
tox = ">=3.15.0"
cryptography = ">=3.2"
pylint = ">=2.5.2"
ptpython = ">=3.0.2"
black = ">=22.6.0"
pre-commit = "^2.20.0"
pytest = ">=5.4.2"
pyfakefs = ">=4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
